--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -30,7 +30,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/nextReminders"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scrollbars="vertical" />
 
             <ImageButton
                 android:id="@+id/expandNextReminders"
