--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,7 +8,7 @@
         <item>1</item>
     </string-array>
     <string-array name="theme_entries_titles">
-        <item>@string/default_theme</item>
+        <item>@string/default_</item>
         <item>@string/alternative</item>
     </string-array>
     <string-array name="theme_entries_values">
@@ -93,5 +93,9 @@
     <string-array name="default_weekend_days">
         <item>6</item>
         <item>7</item>
+    </string-array>
+    <string-array name="notification_importance">
+        <item>@string/default_</item>
+        <item>@string/high</item>
     </string-array>
 </resources>
