Day selection mechanism implemented

--- a/app/src/main/res/layout/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout/fragment_edit_medicine.xml
@@ -81,6 +81,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/openCalendar"
+                style="?attr/materialIconButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
