--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/calendarDayText"
+    style="@style/Widget.Material3.MaterialCalendar.Day"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
