--- a/app/src/main/res/layout/fragment_medicine_calendar.xml
+++ b/app/src/main/res/layout/fragment_medicine_calendar.xml
@@ -9,7 +9,8 @@
         android:id="@+id/medicineCalendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cv_dayViewResource="@layout/calendar_day_layout">
+        app:cv_dayViewResource="@layout/calendar_day_layout"
+        app:cv_monthHeaderResource="@layout/month_header_layout">
 
     </com.kizitonwose.calendar.view.CalendarView>
 
