--- a/app/src/main/res/layout/fragment_medicine_calendar.xml
+++ b/app/src/main/res/layout/fragment_medicine_calendar.xml
@@ -28,5 +28,6 @@
         android:autofillHints=""
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/recent_events"
         android:inputType="textMultiLine" />
 </LinearLayout>
