--- a/app/src/main/res/layout/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout/fragment_edit_medicine.xml
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:icon="@drawable/calendar2_event"
+                app:icon="@drawable/calendar_week"
                 app:iconPadding="0dp" />
         </LinearLayout>
 
