Configurable calendar fragment

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -122,5 +122,11 @@
         <argument
             android:name="medicineId"
             app:argType="integer" />
+        <argument
+            android:name="pastDays"
+            app:argType="long" />
+        <argument
+            android:name="futureDays"
+            app:argType="long" />
     </fragment>
 </navigation>
