Add calendar view to statistics

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,10 +15,27 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/reminderTableButton"
+            style="?attr/materialIconButtonFilledStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/tabular_view" />
+            android:contentDescription="@string/tabular_view"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            app:icon="@drawable/table"
+            app:iconPadding="0dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/reminderCalendarButton"
+            style="?attr/materialIconButtonFilledStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/calendar"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            app:icon="@drawable/calendar_week"
+            app:iconPadding="0dp" />
 
         <Space
             android:layout_width="0dp"
