--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -120,6 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checkable="true"
+                        android:checked="true"
                         android:text="@string/taken"
                         app:checkedIcon="@drawable/check2_circle"
                         app:checkedIconVisible="true"
@@ -130,6 +131,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checkable="true"
+                        android:checked="true"
                         android:text="@string/skipped"
                         app:checkedIcon="@drawable/x_circle"
                         app:checkedIconVisible="true"
