Fixed table layout

--- a/app/src/main/res/layout/reminder_table_column_header.xml
+++ b/app/src/main/res/layout/reminder_table_column_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tableColumnHeaderContainer"
     android:layout_width="wrap_content"
-    android:layout_height="22dp"
+    android:layout_height="match_parent"
     android:backgroundTint="?attr/colorPrimarySurface"
     android:padding="2dp">
 
@@ -10,6 +10,7 @@
         android:id="@+id/tableColumnHeaderTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:textColor="?attr/colorOnPrimarySurface" />
 
