--- a/app/src/main/res/layout/reminder_table_cell.xml
+++ b/app/src/main/res/layout/reminder_table_cell.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cellContainer"
     android:layout_width="wrap_content"
-    android:layout_height="24dp"
+    android:layout_height="wrap_content"
     android:padding="2dp">
 
     <TextView
