--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,6 +7,11 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+    <string-array name="values_0_to_2">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     <string-array name="theme_entries_titles">
         <item>@string/default_</item>
         <item>@string/alternative</item>
@@ -57,6 +62,7 @@
     <string-array name="dismiss_notification_action">
         <item>@string/skip_reminder</item>
         <item>@string/snooze</item>
+        <item>@string/taken</item>
     </string-array>
     <string-array name="snooze_duration">
         <item>@string/minutes_5</item>
