Added padding to bottom of lists to not block the view with the floating action button

--- a/app/src/main/res/layout/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout/fragment_edit_medicine.xml
@@ -94,6 +94,8 @@
             android:id="@+id/reminderList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:paddingBottom="60dp"
             android:scrollbars="vertical" />
     </LinearLayout>
 
