--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:clipToPadding="false"
+        android:paddingBottom="60dp"
         android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
