--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -117,6 +117,9 @@
         <argument
             android:name="eventRemindedTimestamp"
             app:argType="long" />
+        <argument
+            android:name="eventCanEditDate"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
